Update and redeploy application
* Change Bootstrap Theme to Darkly
* Remove Spring Mobile
* Update Spring Boot to 3.0.0
* Update to Java 17
* Update Spock to 2.3-groovy-3.0
* Update Geb to 6.0
* Update jakarta.inject.jakarta.inject-api to 2.0.1
* Update com.google.zxing.javase to 3.5.1
* Update selenium-firefox-driver to 4.7.1
* Update byte-buddy to 1.12.19
* Update org.webjars.sockjs-client to 1.5.1
* Update org.webjars.stomp-websocket to 2.3.4
* Update gmavenplus-plugin to 2.1.0
* Update webdriverextensions-maven-plugin to 3.3.0
* Fix Sonar Issues
* Add Dockerfile
* Update Readme